timezone updation issue

--- a/WebApp/Views/Admin/Create.cshtml
+++ b/WebApp/Views/Admin/Create.cshtml
@@ -340,7 +340,7 @@
                 { data: "userid", className: "never" } //does not show on load
             ]
         });
-        $('editbtn').click(function () {
+        $('.editbtn').click(function () {
 
             //var id = $(this).parent().parent().parent().parent().parent().siblings('#adminid').text();
             var password = $(this).parent().parent().parent().parent().parent().siblings('.password').text();
