--- a/WebApp/Views/Account/AdminLogin.cshtml
+++ b/WebApp/Views/Account/AdminLogin.cshtml
@@ -1,12 +1,19 @@
 ﻿@model WebApp.Models.LoginRegisterViewModel
-
+<link href="~/Content/css/pnotify.css" rel="stylesheet" />
+<script src="https://code.jquery.com/jquery-1.12.3.min.js" integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ=" crossorigin="anonymous"></script>
+<script src="~/Scripts/pnotify.js"></script>
 @{
     ViewBag.Title = "Log in";
     Layout = "~/Views/Shared/_AccountsLayout.cshtml";
     ViewBag.IsPatient = false;
 }
 
-
+<script>
+    @if (ViewBag.ModelError != null)
+{
+         @: new PNotify({ title: 'Error', text: "@ViewBag.ModelError", type: 'error', styling: 'bootstrap3' });
+    }
+</script>
 
 
 <a class="hiddenanchor" id="signup"></a>
@@ -22,14 +29,20 @@
 
             <h1>Login</h1>
             <br />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @*@Html.ValidationSummary(true, "", new { @class = "text-danger" })*@
+                <div>
+                    @Html.ValidationMessageFor(m => m.LoginViewModel.Email, "", new { @class = "text-danger" })
+                </div>
             <div>
                 @Html.TextBoxFor(m => m.LoginViewModel.Email, new { @class = "form-control", @placeholder = "Email Address" })
-                @Html.ValidationMessageFor(m => m.LoginViewModel.Email, "", new { @class = "text-danger" })
+              
+            </div>
+            <div>
+                @Html.ValidationMessageFor(m => m.LoginViewModel.Password, "", new { @class = "text-danger" })
             </div>
             <div>
                 @Html.PasswordFor(m => m.LoginViewModel.Password, new { @class = "form-control" , @placeholder= "Password" })
-                @Html.ValidationMessageFor(m => m.LoginViewModel.Password, "", new { @class = "text-danger" })
+               
             </div>
             @*<div>
                 @Html.CheckBoxFor(m => m.LoginViewModel.RememberMe)
