--- a/WebApp/Views/Appointment/Index.cshtml
+++ b/WebApp/Views/Appointment/Index.cshtml
@@ -515,7 +515,7 @@
 </script> 
 
 <script type="text/javascript">
-        $(document).ready(function () {
+        @*$(document).ready(function () {
 
             
 
@@ -530,5 +530,5 @@
                 window.location = '@Url.Action("Index","PatientProfile")';
 
             }
-        });
+        });*@
 </script>
