--- a/WebApp/Views/DoctorAppointment/Index.cshtml
+++ b/WebApp/Views/DoctorAppointment/Index.cshtml
@@ -231,7 +231,7 @@
 </script>
 
 <script type="text/javascript">
-        $(document).ready(function () {
+        @*$(document).ready(function () {
             
             if('@SessionHandler.UserInfo.timeZone'=='')
             {
@@ -244,7 +244,7 @@
                 window.location = '@Url.Action("Index","DoctorProfile")';
 
             }
-        });
+        });*@
 </script>
 
 
