--- a/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
+++ b/WebApp/Views/SeeDoctor/SeeDoctor.cshtml
@@ -941,7 +941,7 @@
 
     }
     $(document).ready(function () {
-        if('@SessionHandler.UserInfo.timeZone'=='')
+        @*if('@SessionHandler.UserInfo.timeZone'=='')
         {
             new PNotify({
                 title: 'Info',
@@ -951,7 +951,7 @@
             });
             window.location = '@Url.Action("Index","PatientProfile")';
 
-        }
+        }*@
         GetAllLanguages();
         GetAllSpecialities();
         GetROV('@SessionHandler.UserInfo.Id');
