--- a/WebApp/Views/Shared/_PatientLayout.cshtml
+++ b/WebApp/Views/Shared/_PatientLayout.cshtml
@@ -685,7 +685,7 @@
        function () { $(this).removeClass('current-page') })
     </script>
     <script>
-        $(document).ready(function () {
+        @*$(document).ready(function () {
             if ('@SessionHandler.UserInfo.timeZone' != '') {
                 var localtimezone = new Date().toString().match(/\(([A-Za-z\s].*)\)/)[1];
                 //alert('@SessionHandler.UserInfo.timeZone');
@@ -727,7 +727,7 @@
             }
 
 
-        });
+        });*@
 
     </script>
 
